Use another method

--- a/AmazonGiftCards/packages.config
+++ b/AmazonGiftCards/packages.config
@@ -2,5 +2,9 @@
 <packages>
   <package id="Costura.Fody" version="1.6.2" targetFramework="net461" developmentDependency="true" />
   <package id="DotNetZip" version="1.12.0" targetFramework="net35" />
-  <package id="Fody" version="2.0.0" targetFramework="net461" developmentDependency="true" requireReinstallation="true" />
+  <package id="Fody" version="2.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net46" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net46" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net48" />
 </packages>
